Add language attribute into the Person entity. Fixes https://github.com/spring2885/backend/issues/98
