# server/src/main/webapp/swagger.json
@@ -189,7 +189,7 @@
             "schema" : {
               "type" : "array",
               "items" : {
-                "$ref" : "#/definitions/person"
+                "$ref" : "#/definitions/Person"
               }
             }
           }
@@ -213,7 +213,7 @@
           "200" : {
             "description" : "Successful response",
             "schema" : {
-              "$ref" : "#/definitions/person"
+              "$ref" : "#/definitions/Person"
             }
           }
         }
@@ -234,7 +234,7 @@
           "description" : "The profile to update.",
           "required" : true,
           "schema" : {
-            "$ref" : "#/definitions/person"
+            "$ref" : "#/definitions/Person"
           }
         } ],
         "responses" : {
@@ -376,7 +376,7 @@
         }
       }
     },
-    "person" : {
+    "Person" : {
       "type" : "object",
       "properties" : {
         "id" : {
@@ -430,6 +430,9 @@
           "items" : {
             "$ref" : "#/definitions/SocialConnection"
           }
+        },
+        "lang" : {
+          "type" : "string"
         },
         "degree_major" : {
           "type" : "string"
